fix jacoco coverage (#31)
* fix jacoco coverage